Changelog for statcache.

- Add single Resource regeneration OnDocFormSave
- Add regenerate_useragent property

statcache 1.3.0-pl (July 2, 2013)
====================================
- Add regenerate property for replacing static files vs. removing
- Add cacheTV property for forcing caching by TVs
- Fix resolver for Plugin Events

statcache 1.2.0-pl (September 28, 2012)
====================================
- Change skipIfTagsRemain and skipBinaryContentTypes default to true
- Only cache published Resources
- Add ability to limit caching by ContentType id's
- Add ability to limit caching by Resource mime-type
- Add skipBinaryContentTypes for skipping Resources with binary Content

statcache 1.1.0-pl (August 25, 2012)
====================================
- Add skipTV property for skipping by a TV
- Add skipIfTagsRemain property for skipping Resources with non-cacheable tags
- Fix resolver for Plugin Events always reporting false

statcache 1.0.0-pl (August 24, 2012)
====================================
- Initial release.